<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UMM-App</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="about_us">About Us</string>
    <string name="title">Multiply Madness</string>
    <string name="title_activity_challenge">ChallengeActivity</string>
    <string name="hello_world">Hello world!</string>

    <string name="challenge_title">Challenge Mode!</string>
    <string name="challenge_description">Please select a difficulty</string>
    <string name="leaderboard_title">Leaderboards!</string>
    <string name="leaderboard_description">Select your desired leaderboard</string>
    <string name="leaderboard_page_title">nth Grade Leaderboard!</string>
    <string name="leaders_placeholder">1. You (others WOULD be here)</string>
    <string name="top_button">Top</string>
    <string name="you_button">Your Rank</string>
    
    <string name="grade1">1st Grade</string>
    <string name="grade2">2nd Grade</string>
    <string name="grade3">3rd Grade</string>
    <string name="grade4">4th Grade</string>
    <string name="grade5">5th Grade</string>
    <string name="grade6">6th Grade</string>
    <string name="grade7">7th Grade</string>
    <string name="grade8">8th Grade</string>

    <color name="lightblue">#99EAFF</color>
    <color name="blue">#0000FF</color>
    <color name="green">#00FF00</color>
    <color name="red">#FF0000</color>
    <color name="yellow">#FFFF00</color>
    <color name="blblue">#45DAFF</color>
    <color name="aqua">#09EF7C</color>
    <color name="yellowgreen">#CCFF66</color>
    <color name="orange">#FF9900</color>
</resources>
